Add application metadata fields
